# alith

./: .gitignore  CONTRIBUTOR.md  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json
.github/workflows/: ci.yaml  node-sdk.yaml  python-sdk.yaml
.github/workflows/release/node/: Dockerfile
apps/dat/: .env.example  .gitignore  README.md  package.json
apps/dat/src/app/: page.tsx
apps/lazagent/: .gitignore  README.md  package.json
apps/lazagent/src/: index.ts
crates/alith/: Cargo.toml
crates/alith/examples/: agent_with_lazai_privacy_data.rs  lazai_data_contribution_with_reward.rs  lazai_data_contribution_without_reward.rs  lazai_inference_settlement.rs
crates/core/src/: memory.rs
crates/core/src/splitting/: rule_based.rs
crates/data/src/storage/: ipfs.rs
crates/devices/src/devices/: cuda.rs
crates/inference/: Cargo.toml
crates/interface/: Cargo.toml
crates/interface/src/requests/: logit_bias.rs
crates/lazai/: Cargo.toml
crates/lazai/src/: chain.rs  client.rs  contracts.rs  lib.rs  proof.rs  request.rs  settlement.rs
crates/store/: Cargo.toml
integrations/crewai/: .env.example  README.md
integrations/crewai/python/: .gitignore  pyproject.toml
integrations/crewai/python/alith_crewai/: __init__.py  agent_factory.py  alith_llm.py  tool_converter.py
integrations/crewai/python/examples/: simple_crew.py  web3_research_crew.py
integrations/crewai/python/tests/: test_alith_llm.py  test_tool_converter.py
integrations/slack/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
integrations/slack/config/: slack.ts
integrations/slack/docs/: API_DOCUMENTATION.md  CONTRIBUTING.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
integrations/slack/scripts/: setup-complete.ts
integrations/slack/src/: bot.ts  commands.ts  index.ts  utils.ts
integrations/slack/test/: setup-test.ts
knowledge/metis/: blog.json  ceg.json
sdks/: README.md
sdks/go/: Cargo.toml  QUICKSTART.md  README.md  go.mod
sdks/go/alith/: agent.go  go.mod
sdks/go/examples/: go.mod  multi_tools_demo.go  simple_agent.go  simple_example.go  simple_test.go  weather_demo.go
sdks/go/src/: lib.rs
sdks/node/: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
sdks/node/__test__/: chunking.spec.js
sdks/node/examples/: README.md  README_lazai_server_with_x402.md  agent.ts  agent_articleWriter.ts  agent_assistant.ts  agent_deepseek.ts  agent_deitPlanning.ts  agent_github_errorIdentifier.ts  agent_grok.ts  agent_groq.ts  agent_imageDescription.ts  agent_languageTranslator.ts  agent_lawyer.ts  agent_text_summarizer.ts  agent_with_async_tool_handlers.ts  agent_with_lazai.ts  agent_with_mcp.ts  agent_with_tools.ts  agent_with_zod_schema_tools.ts  chatbot.ts  lazai_data_contribution_and_reward.ts  lazai_data_contribution_without_reward copy.ts  lazai_data_contribution_without_reward.ts  lazai_get_all_dat_file_id.ts  lazai_inference_settlement.ts  lazai_server_with_x402.ts  pinecone_store_example.ts  x402-test-page.html
sdks/node/npm/darwin-arm64/: package.json
sdks/node/src/: agent.ts  index.ts  internal.d.ts  internal.js  lib.rs  store.ts
sdks/python/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
sdks/python/alith/: __init__.py  agent.py  embeddings.py  store.py
sdks/python/alith/data/evaluator/: text.py
sdks/python/alith/inference/: query.py  server.py  settlement.py
sdks/python/alith/lazai/: __init__.py  client.py  contracts.py  proof.py  request.py  settlement.py
sdks/python/alith/lazai/node/: evaluator.py  middleware.py  validator.py
sdks/python/alith/multiagent/: README.md  __init__.py  agent.py  chain.py  memory.py  orchestrator.py  parallel.py  types.py
sdks/python/alith/query/: config.py  server.py  settlement.py  types.py
sdks/python/alith/utilities/: __init__.py  search.py
sdks/python/examples/: README.md  agent_anthropic.py  agent_as_translator.py  agent_chat_with_pdf.py  agent_groq.py  agent_math_solver.py  agent_openai.py  agent_with_chat_history.py  agent_with_cohere.py  agent_with_custom_tool.py  agent_with_lazai.py  agent_with_multimodal_embeddings.py  agent_with_ollama.py  agent_with_openai.py  agent_with_phala_tee.py  chat_bot_alith.py  chatbot_with_memory.py  inbuild_search_bot.py  lazai_add_inference_node.py  lazai_add_node.py  lazai_add_query_node.py  lazai_data_contribution_and_reward.py  lazai_data_contribution_with_reward.py  lazai_data_contribution_without_reward.py  lazai_data_permission.py  lazai_data_proof.py  lazai_get_all_dat_file_id.py  lazai_inference_settlement.py  lazai_query_settlement.py  lazai_settlement_headers.py  rsa_gen.py  text_evaluator.py
sdks/python/examples/multiagent/: multi_agent_README.md  multi_agent_chain.py  multi_agent_communication.py  multi_agent_orchestrator.py  multi_agent_parallel.py  multi_agent_research_paper.py
sdks/python/test/: test_multimodal.py  test_settlement.py
sdks/rust/: Cargo.toml
sdks/rust/examples/: agent_articleWriter.rs  agent_github_errorIdentifier.rs  agent_groq.rs  agent_langTranslator.rs  dat_minting.rs
website/: README.md  package-lock.json  package.json
website/src/app/: globals.css  layout.jsx
website/src/content/: _meta.js  alith-using-free-llm.mdx  page.mdx  roadmap.md
(+29 files in other folders)
