[package]
name = "alith-rust-sdk"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[[example]]
name = "agent_groq"
path = "examples/agent_groq.rs"

[[example]]
name = "agent_github_errorIdentifier"
path = "examples/agent_github_errorIdentifier.rs"

[[example]]
name = "agent_articleWriter"
path = "examples/agent_articleWriter.rs"

[[example]]
name = "dat_minting"
path = "examples/dat_minting.rs"

[[example]]
name = "agent_langTranslator"
path = "examples/agent_langTranslator.rs"


[dependencies]
alith = { workspace = true, features = ["lazai", "crypto", "ipfs", "wallet"] }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
